2014-09-17  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserWindow.h:
	* X3DBrowserWidget.h:
	* BrowserWindow.xml:
	* X3DBrowserEditor.h:
	* X3DBrowserWindow.cpp:
	* X3DBrowserWidget.cpp:
	* X3DBrowserEditor.cpp:
	* FileSaveDialog.xml:
	* FileSaveDialog.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2014-09-17  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseInterface.h:
	* X3DBaseInterface.cpp:
	* X3DBrowserWidget.cpp: 

2014-09-17  Holger Seelig  <holger.seelig@yahoo.de>

	* History.svg: 

2014-09-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Index.svg:
	* Library.svg:
	* BrowserWindow.xml:
	* Appearance.svg:
	* LODEditor.xml:
	* NodeIndex.xml:
	* LightEditor.xml:
	* InlineEditor.xml:
	* AppearanceEditor.xml:
	* NULL.x3dv:
	* PrecisionPlacementPanel.xml:
	* AppearanceEditor.cpp:
	* X3DPaletteEditor.cpp: 

2014-09-16  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DPaletteEditor.cpp: 

2014-09-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Santafe1.x3dv:
	* Santafe2.x3dv:
	* Santafe3.x3dv:
	* Santafe4.x3dv:
	* Santafe5.x3dv:
	* Santafe6.x3dv:
	* Santafe7.x3dv:
	* Santafe8.x3dv:
	* Santafe9.x3dv:
	* Santafe18.x3dv:
	* Santafe31.x3dv:
	* Santafe32.x3dv:
	* Santafe33.x3dv:
	* Santafe34.x3dv:
	* Santafe35.x3dv:
	* Santafe36.x3dv:
	* Santafe10.x3dv:
	* Santafe11.x3dv:
	* Santafe12.x3dv:
	* Santafe13.x3dv:
	* Santafe14.x3dv:
	* Santafe15.x3dv:
	* Santafe30.x3dv:
	* Santafe23.x3dv:
	* Santafe22.x3dv:
	* Santafe21.x3dv:
	* Santafe20.x3dv:
	* Santafe17.x3dv:
	* Santafe19.x3dv:
	* Santafe24.x3dv:
	* Santafe16.x3dv:
	* Santafe29.x3dv:
	* Santafe28.x3dv:
	* Santafe25.x3dv:
	* Santafe26.x3dv:
	* Santafe27.x3dv:
	* Santafee2.x3dv:
	* Santafee3.x3dv:
	* Santafee4.x3dv:
	* Santafee5.x3dv:
	* Santafee6.x3dv:
	* Santafee7.x3dv:
	* Santafee8.x3dv:
	* Santafee1.x3dv:
	* Santafee9.x3dv:
	* Santafee16.x3dv:
	* Santafee33.x3dv:
	* Santafee32.x3dv:
	* Santafee31.x3dv:
	* Santafee30.x3dv:
	* Santafee14.x3dv:
	* Santafee34.x3dv:
	* Santafee35.x3dv: