@@ -371,7 +371,7 @@
                     <property name="hexpand">True</property>
                     <property name="text" translatable="yes">1024</property>
                     <property name="adjustment">ImageWidthAdjustment</property>
-                    <property name="climb_rate">0.040000000000000001</property>
+                    <property name="climb_rate">1</property>
                     <property name="numeric">True</property>
                     <property name="value">1024</property>
                   </object>
@@ -389,7 +389,7 @@
                     <property name="halign">start</property>
                     <property name="text" translatable="yes">512</property>
                     <property name="adjustment">ImageHeightAdjustment</property>
-                    <property name="climb_rate">0.040000000000000001</property>
+                    <property name="climb_rate">1</property>
                     <property name="numeric">True</property>
                     <property name="value">576</property>
                   </object>
