@@ -1,5 +1,12 @@
 2014-09-17  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DBrowserEditor.h:
+	* X3DBrowserEditor.cpp:
+	* FileSaveDialog.xml:
+	* FileSaveDialog.cpp: 
+
+2014-09-17  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* X3DBrowserWindow.h:
 	* X3DBrowserWidget.h:
 	* BrowserWindow.xml:
